--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
+  
 </head>
 
 <body>
@@ -163,14 +159,16 @@
   </div>
   </div>
   </div>
-  </main>
-
-  <!-- <footer>
+  
+<div class="mainfooter>
+  <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://adityaauchiha.github.io/cv2/index.html" target="_blank">Aditya Uchiha</a>.
     </p>
-  </footer> -->
+  </footer>
+    </div>
+    </main>
 </body>
 
 </html>
