--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="secondcol">
           <div class="left1">
-          <img class="secondblockimages" src="images\illustration-flowing-conversation.svg" alt="flowingimage">
+          <img class="secondblockimages" src="images/illustration-flowing-conversation.svg" alt="flowingimage">
           </div>
 
           <div class="right">
